Added rudimentary management of canbus messages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "initializer_list": "cpp",
         "ranges": "cpp",
         "utility": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "limits": "cpp"
     }
 }
