Added multiple main file

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,31 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
+build_flags =
+#	-Wunused-variable
+#	-pedantic
+#	-Wall
+#	-Wextra
+#	-Wwrite-strings
+#	-g3
 lib_deps = 
 	jandrassy/ArduinoOTA@^1.0.11
 	pangodream/ESP2SOTA@^1.0.2
 	coryjfowler/mcp_can@^1.5.0
 	arkhipenko/TaskScheduler@^3.7.0
 	adafruit/Adafruit AHTX0@^2.0.5
+
+[env]
+platform = espressif8266
+board = d1_mini_lite
+framework = arduino
+lib_deps = 
+	jandrassy/ArduinoOTA@^1.0.11
+	pangodream/ESP2SOTA@^1.0.2
+	coryjfowler/mcp_can@^1.5.0
+	arkhipenko/TaskScheduler@^3.7.0
+	adafruit/Adafruit AHTX0@^2.0.5
+build_src_filter = +<**/*.h> +<**/*.cpp> -<main_*.cpp> +<main_${PIOENV}.cpp>
+
+[env:MainCarduinoNode]
+[env:CarduinoNode]
