--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,12 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 build_flags =
-#	-Wunused-variable
-#	-pedantic
-#	-Wall
-#	-Wextra
-#	-Wwrite-strings
-#	-g3
+	-Wunused-variable
+	-pedantic
+	-Wall
+	-Wextra
+	-Wwrite-strings
+	-g3
 lib_deps = 
 	jandrassy/ArduinoOTA@^1.0.11
 	pangodream/ESP2SOTA@^1.0.2
@@ -30,6 +30,8 @@ lib_deps =
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
+monitor_speed = 115200
+monitor_filters = esp8266_exception_decoder
 lib_deps = 
 	jandrassy/ArduinoOTA@^1.0.11
 	pangodream/ESP2SOTA@^1.0.2
