--- a/platformio.ini
+++ b/platformio.ini
@@ -39,6 +39,7 @@ lib_deps =
 	arkhipenko/TaskScheduler@^3.7.0
 	adafruit/Adafruit AHTX0@^2.0.5
 build_src_filter = +<**/*.h> +<**/*.cpp> -<main_*.cpp> +<main_${PIOENV}.cpp>
+board_build.f_cpu = 160000000L
 
 [env:MainCarduinoNode]
 [env:CarduinoNode]
