--- a/platformio.ini
+++ b/platformio.ini
@@ -40,6 +40,7 @@ lib_deps =
 	adafruit/Adafruit AHTX0@^2.0.5
 build_src_filter = +<**/*.h> +<**/*.cpp> -<main_*.cpp> +<main_${PIOENV}.cpp>
 board_build.f_cpu = 160000000L
+upload_speed = 500000
 
 [env:MainCarduinoNode]
 [env:CarduinoNode]
