created kline object main

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
-build_flags =
+build_flags = 
 	-Wunused-variable
 	-pedantic
 	-Wall
@@ -25,6 +25,7 @@ lib_deps =
 	coryjfowler/mcp_can@^1.5.0
 	arkhipenko/TaskScheduler@^3.7.0
 	adafruit/Adafruit AHTX0@^2.0.5
+	plerup/EspSoftwareSerial@^8.1.0
 
 [env]
 platform = espressif8266
@@ -38,9 +39,11 @@ lib_deps =
 	coryjfowler/mcp_can@^1.5.0
 	arkhipenko/TaskScheduler@^3.7.0
 	adafruit/Adafruit AHTX0@^2.0.5
+	plerup/EspSoftwareSerial@^8.1.0
 build_src_filter = +<**/*.h> +<**/*.cpp> -<main_*.cpp> +<main_${PIOENV}.cpp>
 board_build.f_cpu = 160000000L
 upload_speed = 500000
 
 [env:MainCarduinoNode]
 [env:CarduinoNode]
+[env:KlineCarduinoNode]
