Added and modified library to handle std function added node to manage media with switch encoder

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,4 +26,5 @@ upload_speed = 500000
 [env:MainCarduinoNode]
 [env:CarduinoNode]
 [env:KlineCarduinoNode]
+[env:MediaControlCarduinoNode]
 [env:test]
