fixed bugs added media control fixed ota updates

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,13 @@ board_build.f_cpu = 160000000L
 upload_speed = 500000
 
 [env:MainCarduinoNode]
-[env:CarduinoNode]
+upload_port = COM13
+
 [env:KlineCarduinoNode]
+upload_port = COM13
+
 [env:MediaControlCarduinoNode]
+upload_port = COM13
+
 [env:test]
+upload_port = COM8
