--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ lib_deps =
 	jandrassy/ArduinoOTA@^1.0.11
 	arkhipenko/TaskScheduler@^3.7.0
 	adafruit/Adafruit AHTX0@^2.0.5
-	plerup/EspSoftwareSerial@^8.1.0
+	links2004/WebSockets@^2.4.1
 build_src_filter = +<**/*.h> +<**/*.cpp> -<main_*.cpp> +<main_${PIOENV}.cpp>
 board_build.f_cpu = 160000000L
 upload_speed = 500000
