--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env]
 platform = espressif8266
-board = d1_mini_lite
+board = d1
 framework = arduino
 monitor_speed = 9600
 monitor_filters = esp8266_exception_decoder
@@ -22,6 +22,7 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 build_src_filter = +<**/*.h> +<**/*.cpp> -<main_*.cpp> +<main_${PIOENV}.cpp>
 board_build.f_cpu = 160000000L
+board_build.filesystem = littlefs
 upload_speed = 500000
 
 [env:MainCarduinoNode]
