--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env]
 platform = espressif8266
-board = d1
+board = d1_mini
 framework = arduino
 monitor_speed = 9600
 monitor_filters = esp8266_exception_decoder
