--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
 	adafruit/Adafruit AHTX0@^2.0.5
 	links2004/WebSockets@^2.4.1
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	ArduinoJson
 build_src_filter = +<**/*.h> +<**/*.cpp> -<main_*.cpp> +<main_${PIOENV}.cpp>
 board_build.f_cpu = 160000000L
 board_build.filesystem = littlefs
